force-app/main/default/objects/Krow__Project__c/Krow__Project__c.object-meta.xml
<CustomObject>
    <label>Klient Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Klient Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>