force-app/main/default/objects/Krow__Project__c/fields/Job_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Job_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Candidate</label>
    <referenceTo>Job_Candidate__c</referenceTo>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>