force-app/main/default/objects/Krow__Project__c/fields/Krow__Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated customer (account) of the project.</description>
    <inlineHelpText>The associated customer (account) of the project.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>