force-app/main/default/objects/Krow__Project__c/fields/Krow__Act_VS_Est_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Act_VS_Est_Budget__c</fullName>
    <description>The sum of all related tasks to the project (Actual vs Estimated Budget) field value.</description>
    <inlineHelpText>The sum of all related tasks to the project (Actual vs Estimated Budget) field value.</inlineHelpText>
    <label>Act vs Est Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>