force-app/main/default/objects/Krow__Project__c/fields/Krow__Act_VS_Est_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Act_VS_Est_Hours__c</fullName>
    <description>The sum of all related project tasks (Actual vs Estimated Hours) field value</description>
    <inlineHelpText>The sum of all related project tasks (Actual vs Estimated Hours) field value</inlineHelpText>
    <label>Act vs Est Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>