force-app/main/default/objects/Krow__Project__c/fields/Krow__Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Actual_Cost__c</fullName>
    <description>Actual Cost</description>
    <label>Deprecated2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>