force-app/main/default/objects/Krow__Project__c/fields/Krow__Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Actual_Hours__c</fullName>
    <label>Deprecated5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>