force-app/main/default/objects/Krow__Project__c/fields/Krow__Archived__c.field-meta.xml
<CustomField>
    <fullName>Krow__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the project will be archived and will not display by default on my projects and resource planner.</description>
    <inlineHelpText>If checked, the project will be archived and will not display by default on my projects and resource planner.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>