force-app/main/default/objects/Krow__Project__c/fields/Krow__Baseline_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Baseline_Cost__c</fullName>
    <description>The roll-up Summary of the Project Costs from the Project Baseline record.</description>
    <inlineHelpText>The roll-up Summary of the Project Costs from the Project Baseline record.</inlineHelpText>
    <label>Baseline Cost</label>
    <summarizedField>Krow__Project_Baseline__c.Krow__Project_Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Krow__Project_Baseline__c.Krow__Set_As_Baseline__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Project_Baseline__c.Krow__Krow_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>