force-app/main/default/objects/Krow__Project__c/fields/Krow__Billable__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the project is a billable project.</description>
    <inlineHelpText>Indicates if the project is a billable project.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>