force-app/main/default/objects/Krow__Project__c/fields/Krow__Billable_Amount_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Amount_Logged__c</fullName>
    <description>Total project billable amount from from all saved billable timesheets.</description>
    <inlineHelpText>Total project billable amount from from all saved billable timesheets.</inlineHelpText>
    <label>Billable Amount(Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>