force-app/main/default/objects/Krow__Project__c/fields/Krow__Billable_Hour_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Hour_Logged__c</fullName>
    <description>Total project billable hours from from all saved billable timesheets.</description>
    <inlineHelpText>Total project billable hours from from all saved billable timesheets.</inlineHelpText>
    <label>Billable Hours(Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>