force-app/main/default/objects/Krow__Project__c/fields/Krow__Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total project billable hours from from all approved billable timesheets.</description>
    <inlineHelpText>Total project billable hours from from all approved billable timesheets.</inlineHelpText>
    <label>Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>