force-app/main/default/objects/Krow__Project__c/fields/Krow__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billing_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The billing method for the project as setup on the billing type record.  If no billing type is entered,  the project is considered a Time &amp; Expense project.</description>
    <inlineHelpText>The billing method for the project as setup on the billing type record.  If no billing type is entered,  the project is considered a Time &amp; Expense project.</inlineHelpText>
    <label>Billing Type</label>
    <referenceTo>Krow__Billing_Type__c</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>