force-app/main/default/objects/Krow__Project__c/fields/Krow__Bottom_Up_Planning__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bottom_Up_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked,  the project Expected Revenue and Budgeted Cost fields are calculated from the sum of all Tasks expected revenue/cost based on resources bill and cost rates.</description>
    <inlineHelpText>If checked,  the project Expected Revenue and Budgeted Cost fields are calculated from the sum of all Tasks expected revenue/cost based on resources bill and cost rates.</inlineHelpText>
    <label>Bottom-Up Planning</label>
    <type>Checkbox</type>
</CustomField>