force-app/main/default/objects/Krow__Project__c/fields/Krow__Close_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Krow__Close_Time_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked,  the Project is no longer available for Time Entry selection (including Task Time, My Timesheet, Mobile).</description>
    <inlineHelpText>if checked,  the Project is no longer available for Time Entry selection (including Task Time, My Timesheet, Mobile).</inlineHelpText>
    <label>Close Time Entry</label>
    <type>Checkbox</type>
</CustomField>