force-app/main/default/objects/Krow__Project__c/fields/Krow__Color__c.field-meta.xml
<CustomField>
    <fullName>Krow__Color__c</fullName>
    <description>A chosen color code for project tasks as displayed on the Gantt and Task Planner.</description>
    <inlineHelpText>A chosen color code for project tasks as displayed on the Gantt and Task Planner.</inlineHelpText>
    <label>Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>