force-app/main/default/objects/Krow__Project__c/fields/Krow__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Completion_Date__c</fullName>
    <description>The date the Project was completed, automatically entered when the project status is moved to completed.</description>
    <inlineHelpText>The date the Project was completed, automatically entered when the project status is moved to completed.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>