force-app/main/default/objects/Krow__Project__c/fields/Krow__Contact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact related to customer account on the project.</description>
    <inlineHelpText>The primary contact related to customer account on the project.</inlineHelpText>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Klient Projects</relationshipLabel>
    <relationshipName>Krow_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>