force-app/main/default/objects/Krow__Project__c/fields/Krow__Create_Contract__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a contract record will be created for the project upon project creation.</description>
    <inlineHelpText>If checked, a contract record will be created for the project upon project creation.</inlineHelpText>
    <label>Create Contract</label>
    <type>Checkbox</type>
</CustomField>