force-app/main/default/objects/Krow__Project__c/fields/Krow__Create_Project_in_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Project_in_JIRA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the project will be created in JIRA when created.  requires JIRA integration to be configured.</description>
    <inlineHelpText>If checked, the project will be created in JIRA when created.  requires JIRA integration to be configured.</inlineHelpText>
    <label>Create Project in JIRA</label>
    <type>Checkbox</type>
</CustomField>