force-app/main/default/objects/Krow__Project__c/fields/Krow__Currency__c.field-meta.xml
<CustomField>
    <fullName>Krow__Currency__c</fullName>
    <description>The default project currency for this project.   Values here should match the values as setup in Currency Management.</description>
    <inlineHelpText>The default project currency for this project.   Values here should match the values as setup in Currency Management.</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>