force-app/main/default/objects/Krow__Project__c/fields/Krow__Default_Duration_Scale__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Duration_Scale__c</fullName>
    <description>Specifies the default Duration Scale on a new task created for this project.  The delivered default is Days.</description>
    <inlineHelpText>Specifies the default Duration Scale on a new task created for this project.  The delivered default is Days.</inlineHelpText>
    <label>Default Duration Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
                <default>true</default>
                <label>Day</label>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>