force-app/main/default/objects/Krow__Project__c/fields/Krow__Default_Scheduling_Mode__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Scheduling_Mode__c</fullName>
    <description>Specifies the default Scheduling Mode on a new task created for this project.  The delivered default is Normal.</description>
    <inlineHelpText>Specifies the default Scheduling Mode on a new task created for this project.  The delivered default is Normal.</inlineHelpText>
    <label>Default Scheduling Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Fixed Effort</fullName>
            </value>
            <value>
                <fullName>Fixed Duration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>