force-app/main/default/objects/Krow__Project__c/fields/Krow__Deferred_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Deferred_Revenue__c</fullName>
    <description>The deferred revenue balance for this project calculated as Invoiced Amount - Recognized Revenue to Date.</description>
    <formula>Krow__Invoiced_Amount__c -  Krow__Recognized_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The deferred revenue balance for this project calculated as Invoiced Amount - Recognized Revenue to Date.</inlineHelpText>
    <label>Deferred Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>