force-app/main/default/objects/Krow__Project__c/fields/Krow__Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Description__c</fullName>
    <description>A general description of the project as entered.</description>
    <inlineHelpText>A general description of the project as entered.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>