force-app/main/default/objects/Krow__Project__c/fields/Krow__Est_vs_Sch_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Est_vs_Sch_Hours__c</fullName>
    <description>A roll-up sum of all Estimated vs Scheduled Hours of the project tasks.</description>
    <inlineHelpText>A roll-up sum of all Estimated vs Scheduled Hours of the project tasks.</inlineHelpText>
    <label>Est vs Sch Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>