force-app/main/default/objects/Krow__Project__c/fields/Krow__Estimated_Cost_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Cost_at_Completion__c</fullName>
    <description>A sum of all project tasks Estimated Cost At Completion Field.</description>
    <inlineHelpText>A sum of all project tasks Estimated Cost At Completion Field.</inlineHelpText>
    <label>Estimated Cost at Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>