force-app/main/default/objects/Krow__Project__c/fields/Krow__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Hours__c</fullName>
    <description>Sum of all Estimated Hours field from all tasks of this Project</description>
    <inlineHelpText>Sum of all Estimated Hours field from all tasks of this Project</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>