force-app/main/default/objects/Krow__Project__c/fields/Krow__Estimated_Hours_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Hours_at_Completion__c</fullName>
    <description>Sum of all project tasks Estimated Hours At Completion Field -  Task Estimated Hours to Complete + Total Task Hours + Task Hours Remaining.</description>
    <formula>Krow__Estimated_Hours_To_Complete__c + Krow__Total_Hours__c + Krow__Hours_Remaining_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all project tasks Estimated Hours At Completion Field -  Task Estimated Hours to Complete + Total Task Hours + Task Hours Remaining.</inlineHelpText>
    <label>Estimated Hours at Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>