force-app/main/default/objects/Krow__Project__c/fields/Krow__Estimated_Hours_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Hours_To_Complete__c</fullName>
    <description>Sum of all project tasks Estimated Hours To Complete field.</description>
    <inlineHelpText>Sum of all project tasks Estimated Hours To Complete field.</inlineHelpText>
    <label>Estimated Hours To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>