force-app/main/default/objects/Krow__Project__c/fields/Krow__Estimated_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Project_Hours__c</fullName>
    <description>The Estimated/Budgeted Hours for this Project as entered.</description>
    <inlineHelpText>The Estimated/Budgeted Hours for this Project as entered.</inlineHelpText>
    <label>Estimated Project Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>