force-app/main/default/objects/Krow__Project__c/fields/Krow__Estimated_Revenue_At_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Revenue_At_Completion__c</fullName>
    <description>The sum of all project tasks Actual vs Estimated Revenue At Completion field value.</description>
    <inlineHelpText>The sum of all project tasks Actual vs Estimated Revenue At Completion field value.</inlineHelpText>
    <label>Estimated Revenue At Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>