force-app/main/default/objects/Krow__Project__c/fields/Krow__Exclude_from_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exclude_from_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If It&apos;s checked it would not display on the Resource Planner.</description>
    <inlineHelpText>If It&apos;s checked it would not display on the Resource Planner.</inlineHelpText>
    <label>Exclude from Planner</label>
    <type>Checkbox</type>
</CustomField>