force-app/main/default/objects/Krow__Project__c/fields/Krow__Exclude_From_Survey_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exclude_From_Survey_Scheduler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To exclude Project from sending Surveys from Scheduler.</description>
    <label>Exclude From Survey Scheduler</label>
    <type>Checkbox</type>
</CustomField>