force-app/main/default/objects/Krow__Project__c/fields/Krow__Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expected_Revenue__c</fullName>
    <description>The Estimated/Budgeted Revenue for this project as entered.</description>
    <inlineHelpText>The Estimated/Budgeted Revenue for this project as entered.</inlineHelpText>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>