force-app/main/default/objects/Krow__Project__c/fields/Krow__Expense_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Budget__c</fullName>
    <description>The estimated Expense Budget for this project as entered.   Also calculated from Expense Budget Contract Lines.</description>
    <inlineHelpText>The estimated Expense Budget for this project as entered.   Also calculated from Expense Budget Contract Lines.</inlineHelpText>
    <label>Expense Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>