force-app/main/default/objects/Krow__Project__c/fields/Krow__Expense_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Cost__c</fullName>
    <description>The calculated Expense Costs for this project from Approved Expenses.</description>
    <inlineHelpText>The calculated Expense Costs for this project from Approved Expenses.</inlineHelpText>
    <label>Expense Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>