force-app/main/default/objects/Krow__Project__c/fields/Krow__Expensify_Tag__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expensify_Tag__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Expensify Tag</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>