force-app/main/default/objects/Krow__Project__c/fields/Krow__External_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__External_Project_ID__c</fullName>
    <description>A field used to track the Project ID from an external system, often used during import.</description>
    <externalId>true</externalId>
    <inlineHelpText>A field used to track the Project ID from an external system, often used during import.</inlineHelpText>
    <label>External Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>