force-app/main/default/objects/Krow__Project__c/fields/Krow__External_Site__c.field-meta.xml
<CustomField>
    <fullName>Krow__External_Site__c</fullName>
    <description>A URL link to a Project Tasks Detail page for this project that can be sent to customers.</description>
    <formula>HYPERLINK(($Setup.Krow__Project_Settings__c.Krow__External_Site_Url__c+&apos;/apex/Krow__ProjectDetail?projectid=&apos;+Id),&apos;View External Site&apos;,&apos;_blank&apos;)</formula>
    <inlineHelpText>A URL link to a Project Tasks Detail page for this project that can be sent to customers.</inlineHelpText>
    <label>External Site</label>
    <type>Text</type>
</CustomField>