force-app/main/default/objects/Krow__Project__c/fields/Krow__Global_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Global_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if this Project is a Global Project.  If checked, the project is available to all project resources on My Project and on My Timesheet for time entry.</description>
    <inlineHelpText>Designates if this Project is a Global Project.  If checked, the project is available to all project resources on My Project and on My Timesheet for time entry.</inlineHelpText>
    <label>Global Project</label>
    <type>Checkbox</type>
</CustomField>