force-app/main/default/objects/Krow__Project__c/fields/Krow__Hours_Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Completion_Percent__c</fullName>
    <description>Determines how the Hours Completion % is calculated on the Project.  The default is Project Estimated Hours.</description>
    <inlineHelpText>Determines how the Hours Completion % is calculated on the Project.  The default is Project Estimated Hours.</inlineHelpText>
    <label>Hours Completion %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task Estimated</fullName>
            </value>
            <value>
                <fullName>Task Scheduled</fullName>
            </value>
            <value>
                <fullName>Project Estimated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>