force-app/main/default/objects/Krow__Project__c/fields/Krow__Hours_Remaining_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Remaining_Logged__c</fullName>
    <description>Calculated as the Project Task Scheduled Hours - Total Logged Hours against the Project.</description>
    <formula>Krow__Task_Scheduled_Hours__c - Krow__Total_Hours_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as the Project Task Scheduled Hours - Total Logged Hours against the Project.</inlineHelpText>
    <label>Hours Remaining (Scheduled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>