force-app/main/default/objects/Krow__Project__c/fields/Krow__HubSpotDealId__c.field-meta.xml
<CustomField>
    <fullName>Krow__HubSpotDealId__c</fullName>
    <description>The Hubspot CRM Deal record ID.  Required Hubspot integration to be configured.</description>
    <inlineHelpText>The Hubspot CRM Deal record ID.  Required Hubspot integration to be configured.</inlineHelpText>
    <label>HubSpotDealId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>