force-app/main/default/objects/Krow__Project__c/fields/Krow__Include_in_Rev_Rec__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_in_Rev_Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this project will be included in Revenue Recognition processing.</description>
    <inlineHelpText>If checked, this project will be included in Revenue Recognition processing.</inlineHelpText>
    <label>Include in Rev Rec</label>
    <type>Checkbox</type>
</CustomField>