force-app/main/default/objects/Krow__Project__c/fields/Krow__Include_in_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_in_Utilization__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this project will be included in Resource Utilization calculations.</description>
    <inlineHelpText>If checked, this project will be included in Resource Utilization calculations.</inlineHelpText>
    <label>Include in Utilization</label>
    <type>Checkbox</type>
</CustomField>