force-app/main/default/objects/Krow__Project__c/fields/Krow__Include_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all tasks can start from any week day on the Gantt, otherwise Sat/Sun will be skipped.</description>
    <inlineHelpText>If checked, all tasks can start from any week day on the Gantt, otherwise Sat/Sun will be skipped.</inlineHelpText>
    <label>Include Weekend</label>
    <type>Checkbox</type>
</CustomField>