force-app/main/default/objects/Krow__Project__c/fields/Krow__Intacct_Parent_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Parent_Project_Id__c</fullName>
    <label>Parent Intacct Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>