force-app/main/default/objects/Krow__Project__c/fields/Krow__Intacct_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Project_Id__c</fullName>
    <description>The Intacct project id received from Intacct.  Requires Intacct integration to be configured.</description>
    <inlineHelpText>The Intacct project id received from Intacct.  Requires Intacct integration to be configured.</inlineHelpText>
    <label>Intacct Project Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>