force-app/main/default/objects/Krow__Project__c/fields/Krow__Intacct_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Record_Number__c</fullName>
    <description>The Intacct project record number received from Intacct. Requires Intacct integration to be configured.</description>
    <inlineHelpText>The Intacct project record number received from Intacct. Requires Intacct integration to be configured.</inlineHelpText>
    <label>Intacct Record Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>