force-app/main/default/objects/Krow__Project__c/fields/Krow__Invoice_Language__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Language__c</fullName>
    <description>Here you can set the default Invoice Language for this project when invoices are created.</description>
    <inlineHelpText>Here you can set the default Invoice Language for this project when invoices are created.</inlineHelpText>
    <label>Invoice Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>da</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>es_MX</fullName>
                <label>Spanish (Mexico)</label>
            </value>
            <value>
                <fullName>fi</fullName>
                <label>Finnish</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>ko</fullName>
                <label>Korean</label>
            </value>
            <value>
                <fullName>nl_NL</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>no</fullName>
                <label>Norwegian</label>
            </value>
            <value>
                <fullName>pt_BR</fullName>
                <label>Portuguese (Brazil)</label>
            </value>
            <value>
                <fullName>ru</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>sv</fullName>
                <label>Swedish</label>
            </value>
            <value>
                <fullName>th</fullName>
                <label>Thai</label>
            </value>
            <value>
                <fullName>zh_CN</fullName>
                <label>Chinese (Simplified)</label>
            </value>
            <value>
                <fullName>zh_TW</fullName>
                <label>Chinese (Traditional)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>